Fix text overflow conflict with display flex

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -24,6 +24,15 @@
   font-weight: 500;
 }
 
+.card__description-text {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  max-width: 330px;
+}
+
 .card__like-btn {
   opacity: 40%;
   background-color: transparent;
@@ -31,6 +40,7 @@
   height: 20px;
   border: none;
   padding: 0;
+  margin-left: 0 auto;
 }
 
 .card__like-btn:hover {
@@ -52,6 +62,10 @@
   .card__description {
     max-width: 288px;
     font-size: 16px;
+  }
+
+  .card__description-text {
+    max-width: 250px;
   }
 
   .card__like-btn {
